[gd_scene load_steps=18 format=2]

[ext_resource path="res://entity/building/model/flag_pole.obj" type="ArrayMesh" id=1]
[ext_resource path="res://entity/building/model/barrel.obj" type="ArrayMesh" id=2]
[ext_resource path="res://entity/building/healing_camp/area_healing.obj" type="ArrayMesh" id=3]
[ext_resource path="res://entity/building/capture_point/capture_point.gd" type="Script" id=4]
[ext_resource path="res://assets/capture_indicator/capture_indicator.tscn" type="PackedScene" id=5]
[ext_resource path="res://entity/building/model/food_box.obj" type="ArrayMesh" id=9]
[ext_resource path="res://entity/building/model/food_barrel.obj" type="ArrayMesh" id=10]

[sub_resource type="SpatialMaterial" id=61]
flags_vertex_lighting = true
flags_do_not_receive_shadows = true
albedo_color = Color( 0.345098, 0.168627, 0, 1 )

[sub_resource type="SpatialMaterial" id=62]
flags_unshaded = true
flags_vertex_lighting = true
flags_do_not_receive_shadows = true

[sub_resource type="SpatialMaterial" id=7]
flags_vertex_lighting = true
flags_do_not_receive_shadows = true
albedo_color = Color( 0.184314, 0.0901961, 0.00392157, 1 )

[sub_resource type="SpatialMaterial" id=8]
flags_vertex_lighting = true
flags_do_not_receive_shadows = true
albedo_color = Color( 0.345098, 0.168627, 0, 1 )

[sub_resource type="SpatialMaterial" id=51]
flags_vertex_lighting = true
flags_do_not_receive_shadows = true
albedo_color = Color( 0.184314, 0.0901961, 0.00392157, 1 )

[sub_resource type="SpatialMaterial" id=52]
flags_vertex_lighting = true
flags_do_not_receive_shadows = true
albedo_color = Color( 0.345098, 0.168627, 0, 1 )

[sub_resource type="SpatialMaterial" id=19]
flags_vertex_lighting = true
flags_do_not_receive_shadows = true
albedo_color = Color( 1, 0.819608, 0, 1 )

[sub_resource type="SpatialMaterial" id=60]
flags_transparent = true
flags_unshaded = true
flags_vertex_lighting = true
flags_no_depth_test = true
flags_do_not_receive_shadows = true
albedo_color = Color( 1, 1, 1, 0.682353 )

[sub_resource type="BoxShape" id=12]
extents = Vector3( 2.79042, 3.10908, 2.49005 )

[sub_resource type="CylinderShape" id=58]
height = 22.0
radius = 6.0

[node name="capture_point" type="KinematicBody"]
collision_layer = 0
input_ray_pickable = false
script = ExtResource( 4 )

[node name="capture_indicator" parent="." instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 7.03148, 0 )

[node name="MeshInstance" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )

[node name="flag_pole" type="MeshInstance" parent="MeshInstance"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.232097, -1.04406, -0.00323439 )
cast_shadow = 0
mesh = ExtResource( 1 )
software_skinning_transform_normals = false
material/0 = SubResource( 61 )
material/1 = SubResource( 62 )

[node name="barrel" type="MeshInstance" parent="MeshInstance"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3.52417, -0.151151, -1.94989 )
cast_shadow = 0
mesh = ExtResource( 2 )
software_skinning_transform_normals = false
material/0 = SubResource( 7 )
material/1 = SubResource( 8 )

[node name="barrel5" type="MeshInstance" parent="MeshInstance"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.32364, -0.193888, 0.153943 )
cast_shadow = 0
mesh = ExtResource( 9 )
software_skinning_transform_normals = false
material/0 = SubResource( 51 )
material/1 = SubResource( 52 )
material/2 = SubResource( 19 )

[node name="barrel6" type="MeshInstance" parent="MeshInstance"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.190239, -0.193888, 4.39064 )
cast_shadow = 0
mesh = ExtResource( 10 )
software_skinning_transform_normals = false
material/0 = SubResource( 51 )
material/1 = SubResource( 52 )
material/2 = SubResource( 19 )

[node name="MeshInstance" type="MeshInstance" parent="MeshInstance"]
transform = Transform( 0.6, 0, 0, 0, 0.6, 0, 0, 0, 0.6, 0, -0.495835, 0 )
cast_shadow = 0
mesh = ExtResource( 3 )
software_skinning_transform_normals = false
material/0 = SubResource( 60 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.80574, 0 )
shape = SubResource( 12 )

[node name="capture_area" type="Area" parent="."]
collision_mask = 0
input_ray_pickable = false
monitorable = false

[node name="CollisionShape" type="CollisionShape" parent="capture_area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.82189, 0 )
shape = SubResource( 58 )

[node name="capturing_timer" type="Timer" parent="."]
autostart = true

[node name="capture_score_timer" type="Timer" parent="."]
wait_time = 15.0
autostart = true

[connection signal="timeout" from="capturing_timer" to="." method="_on_capturing_timer_timeout"]
[connection signal="timeout" from="capture_score_timer" to="." method="_on_capture_score_timer_timeout"]
